src/test/deca/context/valid/created/testInitVar/initAffectSimplePos.deca
// Description :
//    Test d'initialisation d'une variable int avec la valeur 1
//
// Résultats :
//    ok


{
    int x = 1;
}


