src/test/deca/context/invalid/created/testInitVar/initFloatInInt.deca
// Description :
//    Test invalide : Tentative de déclaration d'une variable de type STRING
//
// Résultats :
//    Erreur contextuelle
//    Ligne 9: Incompatible Types Initialization

{
    int x = 1.0;
}